fix shop bugs and add animation for products

--- a/category.html
+++ b/category.html
@@ -564,7 +564,7 @@
                                         <div class="thumb">
                                             <img src="pic/b23.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">دیدن محصول</a>
+                                                <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -583,7 +583,7 @@
                                         <div class="thumb">
                                             <img src="pic/b22.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">دیدن محصول</a>
+                                                <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -602,7 +602,7 @@
                                         <div class="thumb">
                                             <img src="pic/b3.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">دیدن محصول</a>
+                                                <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -621,7 +621,7 @@
                                         <div class="thumb">
                                             <img src="pic/b4.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">دیدن محصول</a>
+                                                <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -640,7 +640,7 @@
                                         <div class="thumb">
                                             <img src="pic/b5.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">دیدن محصول</a>
+                                                <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -659,7 +659,7 @@
                                         <div class="thumb">
                                             <img src="pic/b6.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">دیدن محصول</a>
+                                                <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -678,7 +678,7 @@
                                         <div class="thumb">
                                             <img src="pic/b7.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">دیدن محصول</a>
+                                                <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -697,7 +697,7 @@
                                         <div class="thumb">
                                             <img src="pic/b8.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">دیدن محصول</a>
+                                                <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -716,7 +716,7 @@
                                         <div class="thumb">
                                             <img src="pic/b9.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a href="#" class="addtocart">دیدن محصول</a>
+                                                <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
