--- a/product-details.html
+++ b/product-details.html
@@ -530,7 +530,7 @@
                             <div class="thumb">
                                 <img src="pic/b1.jpg" alt="product image">
                                 <div class="hover">
-                                    <a href="#" class="addtocart">افزودن به سبد</a>
+                                    <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                 </div>
                             </div>
                             <div class="content">
@@ -545,7 +545,7 @@
                             <div class="thumb">
                                 <img src="pic/b2.jpg" alt="product image">
                                 <div class="hover">
-                                    <a href="#" class="addtocart">افزودن به سبد</a>
+                                    <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                 </div>
                             </div>
                             <div class="content">
@@ -560,7 +560,7 @@
                             <div class="thumb">
                                 <img src="pic/b3.jpg" alt="product image">
                                 <div class="hover">
-                                    <a href="#" class="addtocart">افزودن به سبد</a>
+                                    <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                 </div>
                             </div>
                             <div class="content">
@@ -575,7 +575,7 @@
                             <div class="thumb">
                                 <img src="pic/b4.jpg" alt="product image">
                                 <div class="hover">
-                                    <a href="#" class="addtocart">افزودن به سبد</a>
+                                    <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                 </div>
                             </div>
                             <div class="content">
@@ -590,7 +590,7 @@
                             <div class="thumb">
                                 <img src="pic/b5.jpg" alt="product image">
                                 <div class="hover">
-                                    <a href="#" class="addtocart">افزودن به سبد</a>
+                                    <a href="product-details.html" class="addtocart">دیدن محصول</a>
                                 </div>
                             </div>
                             <div class="content">
