--- a/product-details.html
+++ b/product-details.html
@@ -350,7 +350,7 @@
                 <div class="col-lg-6 col-sm-12">
                     <div class="right-content-area">
                         <!-- right content area -->
-                        <div class="top-content mt-sm-4 mt-md-0">
+                        <div class="top-content startopProducts">
                             <ul class="review">
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
