--- a/about.html
+++ b/about.html
@@ -31,6 +31,35 @@
 
 <body>
 
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="text-center">
+
+            <div>
+                <!-- navbar collapse start -->
+                <ul class="navbar-nav">
+                    <!-- navbar- nav -->
+
+                    <li class="nav-item active w-25 mx-auto">
+                        <a class="nav-link" href="index.html">خانه</a>
+                    </li>
+                    <li class="nav-item w-25 mx-auto">
+                        <a class="nav-link" href="category.html">فروشگاه</a>
+                    </li>
+                    <li class="nav-item w-25 mx-auto">
+                        <a class="nav-link" href="blog.html">بلاگ</a>
+                    </li>
+                    <li class="nav-item w-25 mx-auto">
+                        <a class="nav-link" href="about.html">درباره</a>
+                    </li>
+                    <li class="nav-item w-25 mx-auto">
+                        <a class="nav-link" href="contact.html">تماس</a>
+                    </li>
+                </ul>
+                <!-- /.navbar-nav -->
+            </div>
+        </div>
+    </div>
 
 
     <!-- support bar area two start -->
@@ -96,7 +125,7 @@
                     <h3 class="text-white">آقای باتری</h3>
                 </a>
             </div>
-            <div class="collapse navbar-collapse" id="mirex">
+            <div class="collapse navbar-collapse">
                 <!-- navbar collapse start -->
                 <ul class="navbar-nav">
                     <!-- navbar- nav -->
@@ -182,7 +211,7 @@
         </div>
         <!-- /.navbar btn wrapper -->
         <div class="responsive-mobile-menu">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mirex"
+            <button onclick="openNav()" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mirex"
                 aria-controls="mirex" aria-expanded="false" aria-label="تغییر ناوبری">
                 <span class="navbar-toggler-icon"></span>
             </button>
