--- a/index.html
+++ b/index.html
@@ -30,6 +30,36 @@
 <body>
 
 
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="text-center">
+
+            <div>
+                <!-- navbar collapse start -->
+                <ul class="navbar-nav">
+                    <!-- navbar- nav -->
+
+                    <li class="nav-item active w-25 mx-auto">
+                        <a class="nav-link" href="index.html">خانه</a>
+                    </li>
+                    <li class="nav-item w-25 mx-auto">
+                        <a class="nav-link" href="category.html">فروشگاه</a>
+                    </li>
+                    <li class="nav-item w-25 mx-auto">
+                        <a class="nav-link" href="blog.html">بلاگ</a>
+                    </li>
+                    <li class="nav-item w-25 mx-auto">
+                        <a class="nav-link" href="about.html">درباره</a>
+                    </li>
+                    <li class="nav-item w-25 mx-auto">
+                        <a class="nav-link" href="contact.html">تماس</a>
+                    </li>
+                </ul>
+                <!-- /.navbar-nav -->
+            </div>
+        </div>
+    </div>
+
     <!-- support bar area two start -->
     <div class="support-bar-two bgup">
         <div class="container">
@@ -93,7 +123,8 @@
                     <h3 class="text-white">آقای باتری</h3>
                 </a>
             </div>
-            <div class="collapse navbar-collapse" id="mirex">
+
+            <div class="collapse navbar-collapse">
                 <!-- navbar collapse start -->
                 <ul class="navbar-nav">
                     <!-- navbar- nav -->
@@ -177,9 +208,10 @@
             </ul>
             <!-- /.navbar-nav -->
         </div>
+
         <!-- /.navbar btn wrapper -->
         <div class="responsive-mobile-menu">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mirex"
+            <button onclick="openNav()" class="navbar-toggler" type="button" data-toggle="collapse"
                 aria-controls="mirex" aria-expanded="false" aria-label="تغییر ناوبری">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -287,6 +319,9 @@
                     </div><!-- //.single process item one -->
                 </div>
             </div>
+
+
+
         </div>
     </div>
     <!-- process area end -->
